public/css/print.css
@charset "UTF-8";

/*--General Start--*/
.print-content {
    color: #3c3f72;
}

table {
    width: 100%;
}

th, td {
    padding: 10px 9px 10px 9px;
}

.print-template p {
    color: #424242;
    margin-bottom: 1px;
}

.spacing {
    display: inline-block;
    margin-bottom: 9px;
}

html[dir="ltr"] .print-report-padding {
    padding-left: 25px;
}

html[dir="rtl"] .print-report-padding {
    padding-right: 25px;
}

html[dir="ltr"] .right-column {
    text-align: right;
}

html[dir="rtl"] .right-column {
    text-align: left;
}

.small-text {
    font-size: 10px;
}

.text-medium {
    font-weight: 500;
}

.text-normal {
    font-size: 14px;
}

.text-default {
    font-size: 12px;
}

.text-semibold {
    font-weight: 600;
}

.row {
    font-size: 0;
}

.mb-1 {
    margin-bottom: 8px;
}

.margin-bottom-spacing {
    margin: 24px 0;
}

.print-template .mt-1 {
    margin-top: 8px;
}

html[dir="ltr"] .print-template .ml-1,
html[dir="ltr"] .print-template .ltr\:ml-1 {
    margin-left: 8px;
}

html[dir="rtl"] .print-template .mr-1,
html[dir="rtl"] .print-template .rtl\:mr-1 {
    margin-right: 8px;
}

html[dir="ltr"] .print-template .ml-2,
html[dir="ltr"] .print-template .ltr\:ml-2 {
    margin-left: 16px;
}

html[dir="rtl"] .print-template .mr-2,
html[dir="rtl"] .print-template .rtl\:mr-2 {
    margin-right: 16px;
}

html[dir="ltr"] .pl-head {
    padding-left: 18px;
}

html[dir="rtl"] .pl-head {
    padding-right: 18px;
}

.print-template .mt-0 {
    margin-top: 0 !important;
}

.print-template .mt-1 {
    margin-top: 8px;
}

.print-template .mt-2 {
    margin-top: 16px;
}

.print-template .mt-3 {
    margin-top: 24px;
}

.print-template .mt-4 {
    margin-top: 32px;
}

.print-template .mt-5 {
    margin-top: 40px;
}

.print-template .mt-6 {
    margin-top: 48px;
}

.print-template .mt-7 {
    margin-top: 56px;
}

.print-template .mt-8 {
    margin-top: 64px;
}

.print-template .mt-9 {
    margin-top: 72px;
}

.print-template .pb-0 {
    padding-bottom: 0;
}

.print-template .pb-1 {
    padding-bottom: 8px;
}

.print-template .py-1 {
    padding-bottom: 3px;
    padding-top: 3px;
}

.py-top {
    padding-bottom: 16px;
    padding-top: 16px;
}

html[dir="ltr"] .p-index-left {
    padding: 0 15px 0 0;
}

html[dir="rtl"] .p-index-left {
    padding: 0 0 0 15px;
}

html[dir="ltr"] .p-index-right {
    padding: 0 0 0 15px;
}

html[dir="rtl"] .p-index-right {
    padding: 0 15px 0 0;
}

.p-modern {
    padding: 0 10px 0 10px;
}

.print-template .pt-2 {
    padding-top: 16px;
}

.print-template .pb-2 {
    padding-bottom: 16px;
}

html[dir="ltr"] .print-template .pl-3,
html[dir="ltr"] .print-template .ltr\:pl-3 {
    padding-left: 24px;
}

html[dir="rtl"] .print-template .pr-3,
html[dir="rtl"] .print-template .rtl\:pr-3 {
    padding-right: 24px;
}

html[dir="ltr"] .print-template .pl-4,
html[dir="ltr"] .print-template .ltr\:pl-4 {
    padding-left: 32px;
}

html[dir="rtl"] .print-template .pr-4,
html[dir="rtl"] .print-template .rtl\:pr-4 {
    padding-right: 32px;
}

html[dir="ltr"] .print-template .pl-5,
html[dir="ltr"] .print-template .ltr\:pl-5 {
    padding-left: 40px;
}

html[dir="rtl"] .print-template .pr-5,
html[dir="rtl"] .print-template .rtl\:pr-5 {
    padding-right: 40px;
}

html[dir="ltr"] .print-template .pl-6,
html[dir="ltr"] .print-template .ltr\:pl-6 {
    padding-left: 48px;
}

html[dir="rtl"] .print-template .pr-6,
html[dir="rtl"] .print-template .rtl\:pr-6 {
    padding-right: 48px;
}

html[dir="ltr"] .print-template .pl-7,
html[dir="ltr"] .print-template .ltr\:pl-7 {
    padding-left: 56px;
}

html[dir="rtl"] .print-template .pr-7,
html[dir="rtl"] .print-template .rtl\:pr-7 {
    padding-right: 56px;
}

html[dir="ltr"] .print-template .pl-8,
html[dir="ltr"] .print-template .ltr\:pl-8 {
    padding-left: 64px;
}

html[dir="rtl"] .print-template .pr-8,
html[dir="rtl"] .print-template .rtl\:pr-8 {
    padding-right: 64px;
}

html[dir="ltr"] .print-template .pl-9,
html[dir="ltr"] .print-template .ltr\:pl-9 {
    padding-left: 72px;
}

html[dir="rtl"] .print-template .pr-9,
html[dir="rtl"] .print-template .rtl\:pr-9 {
    padding-right: 72px;
}

.border-1 {
    border: 1px solid #e5e5e5;
}

.border-top-1 {
    border-top: 1px solid #adadad;
}

.border-bottom-1 {
    border-bottom: 1px solid #adadad;
}

.border-radius-default {
    border-radius: 0.25rem
}

/* html[dir="ltr"] .border-radius-first {
    border-radius: 10px 0px 0px 10px;
}

html[dir="rtl"] .border-radius-first {
    border-radius: 0px 10px 10px 0px;
}

html[dir="ltr"] .border-radius-last {
    border-radius: 0px 10px 10px 0px;
}

html[dir="rtl"] .border-radius-last {
    border-radius: 10px 0px 0px 10px;
} */

/* template table border radius control */
html[dir="ltr"] .lines-radius-border thead td:first-child {
    border-radius: 10px 0px 0px 10px;
}

html[dir="ltr"] .lines-radius-border thead td:last-child {
    border-radius: 0px 10px 10px 0px;
}
/* template table border radius control */

html[dir="ltr"] .float-left,
html[dir="ltr"] .ltr\:float-left {
    float: left !important;
}

html[dir="rtl"] .float-left,
html[dir="rtl"] .ltr\:float-left {
    float: left !important;
}

html[dir="ltr"] .float-right,
html[dir="ltr"] .ltr\:float-right {
    float: right !important;
}

html[dir="rtl"] .float-right,
html[dir="rtl"] .ltr\:float-right {
    float: right !important;
}

.font-size-unset {
    font-size: unset;
}

.text {
    color: #595959;
    margin-top:8px;
    font-size: 12px;
}

.text-dark {
    color: black;
}

.text-nowrap {
    white-space: nowrap;
}

html[dir="ltr"] .text-left, html[dir="ltr"] .ltr\:text-left {
    text-align: left;
}

html[dir="rtl"] .text-left, html[dir="rtl"] .rtl\:text-left {
    text-align: left;
}

html[dir="ltr"] .text-alignment-left {
    text-align: left !important;
}

html[dir="rtl"] .text-alignment-left {
    text-align: right !important;
}

html[dir="ltr"] .text-alignment-right {
    text-align: right !important;
}
/* ... */

